parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
prog' -> . prog [ # ]
## Transitions:
-- On CLASS shift to state 1
-- On prog shift to state 124
-- On list(classe) shift to state 125
-- On classe shift to state 128
## Reductions:
-- On LCBR
--   reduce production list(classe) ->

State 1:
## Known stack suffix:
## CLASS
## LR(1) items:
classe -> CLASS . IDCLASS LPAREN list(declaration) RPAREN IS LBRACKET block_class RBRACKET [ LCBR CLASS ]
classe -> CLASS . IDCLASS LPAREN list(declaration) RPAREN EXTENDS expression IS LBRACKET block_class RBRACKET [ LCBR CLASS ]
classe -> CLASS . IDCLASS LPAREN list(declaration) RPAREN EXTENDS expression ID LBRACKET block RBRACKET IS LBRACKET block_class RBRACKET [ LCBR CLASS ]
classe -> CLASS . IDCLASS LPAREN list(declaration) RPAREN LPAREN RPAREN LBRACKET block RBRACKET IS LBRACKET block_class RBRACKET [ LCBR CLASS ]
## Transitions:
-- On IDCLASS shift to state 2
## Reductions:

State 2:
## Known stack suffix:
## CLASS IDCLASS
## LR(1) items:
classe -> CLASS IDCLASS . LPAREN list(declaration) RPAREN IS LBRACKET block_class RBRACKET [ LCBR CLASS ]
classe -> CLASS IDCLASS . LPAREN list(declaration) RPAREN EXTENDS expression IS LBRACKET block_class RBRACKET [ LCBR CLASS ]
classe -> CLASS IDCLASS . LPAREN list(declaration) RPAREN EXTENDS expression ID LBRACKET block RBRACKET IS LBRACKET block_class RBRACKET [ LCBR CLASS ]
classe -> CLASS IDCLASS . LPAREN list(declaration) RPAREN LPAREN RPAREN LBRACKET block RBRACKET IS LBRACKET block_class RBRACKET [ LCBR CLASS ]
## Transitions:
-- On LPAREN shift to state 3
## Reductions:

State 3:
## Known stack suffix:
## CLASS IDCLASS LPAREN
## LR(1) items:
classe -> CLASS IDCLASS LPAREN . list(declaration) RPAREN IS LBRACKET block_class RBRACKET [ LCBR CLASS ]
classe -> CLASS IDCLASS LPAREN . list(declaration) RPAREN EXTENDS expression IS LBRACKET block_class RBRACKET [ LCBR CLASS ]
classe -> CLASS IDCLASS LPAREN . list(declaration) RPAREN EXTENDS expression ID LBRACKET block RBRACKET IS LBRACKET block_class RBRACKET [ LCBR CLASS ]
classe -> CLASS IDCLASS LPAREN . list(declaration) RPAREN LPAREN RPAREN LBRACKET block RBRACKET IS LBRACKET block_class RBRACKET [ LCBR CLASS ]
## Transitions:
-- On VAR shift to state 4
-- On list(declaration) shift to state 12
-- On declaration shift to state 74
## Reductions:
-- On RPAREN
--   reduce production list(declaration) ->

State 4:
## Known stack suffix:
## VAR
## LR(1) items:
declaration -> VAR . ID COLON ID [ VAR UMINUS THIS SUPER RPAREN RCBR NEW LPAREN IF IDCLASS ID DEF CSTE ]
declaration -> VAR . AUTO ID COLON ID [ VAR UMINUS THIS SUPER RPAREN RCBR NEW LPAREN IF IDCLASS ID DEF CSTE ]
## Transitions:
-- On ID shift to state 5
-- On AUTO shift to state 8
## Reductions:

State 5:
## Known stack suffix:
## VAR ID
## LR(1) items:
declaration -> VAR ID . COLON ID [ VAR UMINUS THIS SUPER RPAREN RCBR NEW LPAREN IF IDCLASS ID DEF CSTE ]
## Transitions:
-- On COLON shift to state 6
## Reductions:

State 6:
## Known stack suffix:
## VAR ID COLON
## LR(1) items:
declaration -> VAR ID COLON . ID [ VAR UMINUS THIS SUPER RPAREN RCBR NEW LPAREN IF IDCLASS ID DEF CSTE ]
## Transitions:
-- On ID shift to state 7
## Reductions:

State 7:
## Known stack suffix:
## VAR ID COLON ID
## LR(1) items:
declaration -> VAR ID COLON ID . [ VAR UMINUS THIS SUPER RPAREN RCBR NEW LPAREN IF IDCLASS ID DEF CSTE ]
## Transitions:
## Reductions:
-- On VAR UMINUS THIS SUPER RPAREN RCBR NEW LPAREN IF IDCLASS ID DEF CSTE
--   reduce production declaration -> VAR ID COLON ID

State 8:
## Known stack suffix:
## VAR AUTO
## LR(1) items:
declaration -> VAR AUTO . ID COLON ID [ VAR UMINUS THIS SUPER RPAREN RCBR NEW LPAREN IF IDCLASS ID DEF CSTE ]
## Transitions:
-- On ID shift to state 9
## Reductions:

State 9:
## Known stack suffix:
## VAR AUTO ID
## LR(1) items:
declaration -> VAR AUTO ID . COLON ID [ VAR UMINUS THIS SUPER RPAREN RCBR NEW LPAREN IF IDCLASS ID DEF CSTE ]
## Transitions:
-- On COLON shift to state 10
## Reductions:

State 10:
## Known stack suffix:
## VAR AUTO ID COLON
## LR(1) items:
declaration -> VAR AUTO ID COLON . ID [ VAR UMINUS THIS SUPER RPAREN RCBR NEW LPAREN IF IDCLASS ID DEF CSTE ]
## Transitions:
-- On ID shift to state 11
## Reductions:

State 11:
## Known stack suffix:
## VAR AUTO ID COLON ID
## LR(1) items:
declaration -> VAR AUTO ID COLON ID . [ VAR UMINUS THIS SUPER RPAREN RCBR NEW LPAREN IF IDCLASS ID DEF CSTE ]
## Transitions:
## Reductions:
-- On VAR UMINUS THIS SUPER RPAREN RCBR NEW LPAREN IF IDCLASS ID DEF CSTE
--   reduce production declaration -> VAR AUTO ID COLON ID

State 12:
## Known stack suffix:
## CLASS IDCLASS LPAREN list(declaration)
## LR(1) items:
classe -> CLASS IDCLASS LPAREN list(declaration) . RPAREN IS LBRACKET block_class RBRACKET [ LCBR CLASS ]
classe -> CLASS IDCLASS LPAREN list(declaration) . RPAREN EXTENDS expression IS LBRACKET block_class RBRACKET [ LCBR CLASS ]
classe -> CLASS IDCLASS LPAREN list(declaration) . RPAREN EXTENDS expression ID LBRACKET block RBRACKET IS LBRACKET block_class RBRACKET [ LCBR CLASS ]
classe -> CLASS IDCLASS LPAREN list(declaration) . RPAREN LPAREN RPAREN LBRACKET block RBRACKET IS LBRACKET block_class RBRACKET [ LCBR CLASS ]
## Transitions:
-- On RPAREN shift to state 13
## Reductions:

State 13:
## Known stack suffix:
## CLASS IDCLASS LPAREN list(declaration) RPAREN
## LR(1) items:
classe -> CLASS IDCLASS LPAREN list(declaration) RPAREN . IS LBRACKET block_class RBRACKET [ LCBR CLASS ]
classe -> CLASS IDCLASS LPAREN list(declaration) RPAREN . EXTENDS expression IS LBRACKET block_class RBRACKET [ LCBR CLASS ]
classe -> CLASS IDCLASS LPAREN list(declaration) RPAREN . EXTENDS expression ID LBRACKET block RBRACKET IS LBRACKET block_class RBRACKET [ LCBR CLASS ]
classe -> CLASS IDCLASS LPAREN list(declaration) RPAREN . LPAREN RPAREN LBRACKET block RBRACKET IS LBRACKET block_class RBRACKET [ LCBR CLASS ]
## Transitions:
-- On LPAREN shift to state 14
-- On IS shift to state 106
-- On EXTENDS shift to state 110
## Reductions:

State 14:
## Known stack suffix:
## CLASS IDCLASS LPAREN list(declaration) RPAREN LPAREN
## LR(1) items:
classe -> CLASS IDCLASS LPAREN list(declaration) RPAREN LPAREN . RPAREN LBRACKET block RBRACKET IS LBRACKET block_class RBRACKET [ LCBR CLASS ]
## Transitions:
-- On RPAREN shift to state 15
## Reductions:

State 15:
## Known stack suffix:
## CLASS IDCLASS LPAREN list(declaration) RPAREN LPAREN RPAREN
## LR(1) items:
classe -> CLASS IDCLASS LPAREN list(declaration) RPAREN LPAREN RPAREN . LBRACKET block RBRACKET IS LBRACKET block_class RBRACKET [ LCBR CLASS ]
## Transitions:
-- On LBRACKET shift to state 16
## Reductions:

State 16:
## Known stack suffix:
## CLASS IDCLASS LPAREN list(declaration) RPAREN LPAREN RPAREN LBRACKET
## LR(1) items:
classe -> CLASS IDCLASS LPAREN list(declaration) RPAREN LPAREN RPAREN LBRACKET . block RBRACKET IS LBRACKET block_class RBRACKET [ LCBR CLASS ]
## Transitions:
-- On LCBR shift to state 17
-- On block shift to state 76
## Reductions:

State 17:
## Known stack suffix:
## LCBR
## LR(1) items:
block -> LCBR . list(declaration) list(instruction) RCBR [ RCBR RBRACKET EOF DEF ]
## Transitions:
-- On VAR shift to state 4
-- On list(declaration) shift to state 18
-- On declaration shift to state 74
## Reductions:
-- On UMINUS THIS SUPER RCBR NEW LPAREN IF IDCLASS ID CSTE
--   reduce production list(declaration) ->

State 18:
## Known stack suffix:
## LCBR list(declaration)
## LR(1) items:
block -> LCBR list(declaration) . list(instruction) RCBR [ RCBR RBRACKET EOF DEF ]
## Transitions:
-- On UMINUS shift to state 19
-- On THIS shift to state 20
-- On SUPER shift to state 23
-- On NEW shift to state 26
-- On LPAREN shift to state 29
-- On IF shift to state 59
-- On IDCLASS shift to state 30
-- On ID shift to state 32
-- On CSTE shift to state 33
-- On list(instruction) shift to state 70
-- On instruction shift to state 72
-- On ident shift to state 65
-- On expression shift to state 68
## Reductions:
-- On RCBR
--   reduce production list(instruction) ->

State 19:
## Known stack suffix:
## UMINUS
## LR(1) items:
expression -> UMINUS . expression [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE ]
## Transitions:
-- On UMINUS shift to state 19
-- On THIS shift to state 20
-- On SUPER shift to state 23
-- On NEW shift to state 26
-- On LPAREN shift to state 29
-- On IDCLASS shift to state 30
-- On ID shift to state 32
-- On CSTE shift to state 33
-- On ident shift to state 36
-- On expression shift to state 58
## Reductions:

State 20:
## Known stack suffix:
## THIS
## LR(1) items:
ident -> THIS . DOT ID [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DOT DIV CSTE ASSIGN ]
## Transitions:
-- On DOT shift to state 21
## Reductions:

State 21:
## Known stack suffix:
## THIS DOT
## LR(1) items:
ident -> THIS DOT . ID [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DOT DIV CSTE ASSIGN ]
## Transitions:
-- On ID shift to state 22
## Reductions:

State 22:
## Known stack suffix:
## THIS DOT ID
## LR(1) items:
ident -> THIS DOT ID . [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DOT DIV CSTE ASSIGN ]
## Transitions:
## Reductions:
-- On UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DOT DIV CSTE ASSIGN
--   reduce production ident -> THIS DOT ID

State 23:
## Known stack suffix:
## SUPER
## LR(1) items:
ident -> SUPER . DOT ID [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DOT DIV CSTE ASSIGN ]
## Transitions:
-- On DOT shift to state 24
## Reductions:

State 24:
## Known stack suffix:
## SUPER DOT
## LR(1) items:
ident -> SUPER DOT . ID [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DOT DIV CSTE ASSIGN ]
## Transitions:
-- On ID shift to state 25
## Reductions:

State 25:
## Known stack suffix:
## SUPER DOT ID
## LR(1) items:
ident -> SUPER DOT ID . [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DOT DIV CSTE ASSIGN ]
## Transitions:
## Reductions:
-- On UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DOT DIV CSTE ASSIGN
--   reduce production ident -> SUPER DOT ID

State 26:
## Known stack suffix:
## NEW
## LR(1) items:
expression -> NEW . IDCLASS LPAREN list(expression) RPAREN [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE ]
## Transitions:
-- On IDCLASS shift to state 27
## Reductions:

State 27:
## Known stack suffix:
## NEW IDCLASS
## LR(1) items:
expression -> NEW IDCLASS . LPAREN list(expression) RPAREN [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE ]
## Transitions:
-- On LPAREN shift to state 28
## Reductions:

State 28:
## Known stack suffix:
## NEW IDCLASS LPAREN
## LR(1) items:
expression -> NEW IDCLASS LPAREN . list(expression) RPAREN [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE ]
## Transitions:
-- On UMINUS shift to state 19
-- On THIS shift to state 20
-- On SUPER shift to state 23
-- On NEW shift to state 26
-- On LPAREN shift to state 29
-- On IDCLASS shift to state 30
-- On ID shift to state 32
-- On CSTE shift to state 33
-- On list(expression) shift to state 56
-- On ident shift to state 36
-- On expression shift to state 39
## Reductions:
-- On RPAREN
--   reduce production list(expression) ->

State 29:
## Known stack suffix:
## LPAREN
## LR(1) items:
expression -> LPAREN . ID expression RPAREN [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE ]
expression -> LPAREN . expression RPAREN [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE ]
## Transitions:
-- On UMINUS shift to state 19
-- On THIS shift to state 20
-- On SUPER shift to state 23
-- On NEW shift to state 26
-- On LPAREN shift to state 29
-- On IDCLASS shift to state 30
-- On ID shift to state 51
-- On CSTE shift to state 33
-- On ident shift to state 36
-- On expression shift to state 54
## Reductions:

State 30:
## Known stack suffix:
## IDCLASS
## LR(1) items:
expression -> IDCLASS . LPAREN list(expression) RPAREN [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE ]
## Transitions:
-- On LPAREN shift to state 31
## Reductions:

State 31:
## Known stack suffix:
## IDCLASS LPAREN
## LR(1) items:
expression -> IDCLASS LPAREN . list(expression) RPAREN [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE ]
## Transitions:
-- On UMINUS shift to state 19
-- On THIS shift to state 20
-- On SUPER shift to state 23
-- On NEW shift to state 26
-- On LPAREN shift to state 29
-- On IDCLASS shift to state 30
-- On ID shift to state 32
-- On CSTE shift to state 33
-- On list(expression) shift to state 34
-- On ident shift to state 36
-- On expression shift to state 39
## Reductions:
-- On RPAREN
--   reduce production list(expression) ->

State 32:
## Known stack suffix:
## ID
## LR(1) items:
expression -> ID . [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE ]
## Transitions:
## Reductions:
-- On UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE
--   reduce production expression -> ID

State 33:
## Known stack suffix:
## CSTE
## LR(1) items:
expression -> CSTE . [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE ]
## Transitions:
## Reductions:
-- On UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE
--   reduce production expression -> CSTE

State 34:
## Known stack suffix:
## IDCLASS LPAREN list(expression)
## LR(1) items:
expression -> IDCLASS LPAREN list(expression) . RPAREN [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE ]
## Transitions:
-- On RPAREN shift to state 35
## Reductions:

State 35:
## Known stack suffix:
## IDCLASS LPAREN list(expression) RPAREN
## LR(1) items:
expression -> IDCLASS LPAREN list(expression) RPAREN . [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE ]
## Transitions:
## Reductions:
-- On UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE
--   reduce production expression -> IDCLASS LPAREN list(expression) RPAREN

State 36:
## Known stack suffix:
## ident
## LR(1) items:
expression -> ident . [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE ]
expression -> ident . DOT ID [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE ]
## Transitions:
-- On DOT shift to state 37
## Reductions:
-- On UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE
--   reduce production expression -> ident

State 37:
## Known stack suffix:
## ident DOT
## LR(1) items:
expression -> ident DOT . ID [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE ]
## Transitions:
-- On ID shift to state 38
## Reductions:

State 38:
## Known stack suffix:
## ident DOT ID
## LR(1) items:
expression -> ident DOT ID . [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE ]
## Transitions:
## Reductions:
-- On UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE
--   reduce production expression -> ident DOT ID

State 39:
## Known stack suffix:
## expression
## LR(1) items:
expression -> expression . PLUS expression [ UMINUS TIMES THIS SUPER RPAREN RELOP PLUS NEW MINUS LPAREN IDCLASS ID DIV CSTE ]
expression -> expression . MINUS expression [ UMINUS TIMES THIS SUPER RPAREN RELOP PLUS NEW MINUS LPAREN IDCLASS ID DIV CSTE ]
expression -> expression . TIMES expression [ UMINUS TIMES THIS SUPER RPAREN RELOP PLUS NEW MINUS LPAREN IDCLASS ID DIV CSTE ]
expression -> expression . DIV expression [ UMINUS TIMES THIS SUPER RPAREN RELOP PLUS NEW MINUS LPAREN IDCLASS ID DIV CSTE ]
expression -> expression . RELOP expression [ UMINUS TIMES THIS SUPER RPAREN RELOP PLUS NEW MINUS LPAREN IDCLASS ID DIV CSTE ]
list(expression) -> expression . list(expression) [ RPAREN ]
## Transitions:
-- On UMINUS shift to state 19
-- On TIMES shift to state 40
-- On THIS shift to state 20
-- On SUPER shift to state 23
-- On RELOP shift to state 42
-- On PLUS shift to state 44
-- On NEW shift to state 26
-- On MINUS shift to state 48
-- On LPAREN shift to state 29
-- On IDCLASS shift to state 30
-- On ID shift to state 32
-- On DIV shift to state 46
-- On CSTE shift to state 33
-- On list(expression) shift to state 50
-- On ident shift to state 36
-- On expression shift to state 39
## Reductions:
-- On RPAREN
--   reduce production list(expression) ->

State 40:
## Known stack suffix:
## expression TIMES
## LR(1) items:
expression -> expression TIMES . expression [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE ]
## Transitions:
-- On UMINUS shift to state 19
-- On THIS shift to state 20
-- On SUPER shift to state 23
-- On NEW shift to state 26
-- On LPAREN shift to state 29
-- On IDCLASS shift to state 30
-- On ID shift to state 32
-- On CSTE shift to state 33
-- On ident shift to state 36
-- On expression shift to state 41
## Reductions:

State 41:
## Known stack suffix:
## expression TIMES expression
## LR(1) items:
expression -> expression . PLUS expression [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE ]
expression -> expression . MINUS expression [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE ]
expression -> expression . TIMES expression [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE ]
expression -> expression TIMES expression . [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE ]
expression -> expression . DIV expression [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE ]
expression -> expression . RELOP expression [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE ]
## Transitions:
-- On RELOP shift to state 42
## Reductions:
-- On UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE
--   reduce production expression -> expression TIMES expression

State 42:
## Known stack suffix:
## expression RELOP
## LR(1) items:
expression -> expression RELOP . expression [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE ]
## Transitions:
-- On UMINUS shift to state 19
-- On THIS shift to state 20
-- On SUPER shift to state 23
-- On NEW shift to state 26
-- On LPAREN shift to state 29
-- On IDCLASS shift to state 30
-- On ID shift to state 32
-- On CSTE shift to state 33
-- On ident shift to state 36
-- On expression shift to state 43
## Reductions:

State 43:
## Known stack suffix:
## expression RELOP expression
## LR(1) items:
expression -> expression . PLUS expression [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE ]
expression -> expression . MINUS expression [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE ]
expression -> expression . TIMES expression [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE ]
expression -> expression . DIV expression [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE ]
expression -> expression . RELOP expression [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE ]
expression -> expression RELOP expression . [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE ]
## Transitions:
## Reductions:
-- On UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE
--   reduce production expression -> expression RELOP expression

State 44:
## Known stack suffix:
## expression PLUS
## LR(1) items:
expression -> expression PLUS . expression [ UMINUS TIMES THIS THEN SUPER SEMICOLON RPAREN RELOP RCBR PLUS NEW MINUS LPAREN IS IF IDCLASS ID ELSE DIV CSTE ]
## Transitions:
-- On UMINUS shift to state 19
-- On THIS shift to state 20
-- On SUPER shift to state 23
-- On NEW shift to state 26
-- On LPAREN shift to state 29
-- On IDCLASS shift to state 30
-- On ID shift to state 32
-- On CSTE shift to state 33
-- On ident shift to state 36
-- On expression shift to state 45
## Reductions:
